优化swag接口文档说明
